--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Nate's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/Natelamo5/Resume/blob/main/Resume.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <a href="https://Natelamo5.github.io/Resume.pdf" target="_blank">PDF.</a>
   </body>
 </html>
